infra.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-autoscale
  labels:
    app: demo-autoscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-autoscale
  template:
    metadata:
      labels:
        app: demo-autoscale
    spec:
      containers:
      - name: web
        image: image-registry.openshift-image-registry.svc:5000/default/demo-autoscale@sha256:1841409218a9e440687fbba8a3ab7b279104fd2913d0a24e0a4c3766f01d7c32
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"      # O HPA usa isso como base (100 milicores)
            memory: "128Mi"
          limits:
            cpu: "500m"      # Limite máximo por pod
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: demo-autoscale-svc
spec:
  selector:
    app: demo-autoscale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-autoscale-route
spec:
  to:
    kind: Service
    name: demo-autoscale-svc
